Improved print styles

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,11 @@
 Changelog
 =========
 
-1.2 - Dec 9, 2009
------------------
+1.2
+---
 
-* Fixed error when Sun & Rain theme is installed but turned off in portal_skins
+* Improved print styles [serg] - Dec 10, 2009
+* Fixed error when Sun & Rain theme is installed but turned off in portal_skins [koval] - Dec 9, 2009
 
 1.1 - Nov 6, 2009
 -----------------
