Default page id was changed

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,8 +4,9 @@ Changelog
 1.2
 ---
 
-* Improved print styles [serg] - Dec 10, 2009
 * Fixed error when Sun & Rain theme is installed but turned off in portal_skins [koval] - Dec 9, 2009
+* Improved print styles [serg] - Dec 10, 2009
+* Default page id was changed [serg] - Dec 10, 2009
 
 1.1 - Nov 6, 2009
 -----------------
