--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,8 @@
 Changelog
 =========
 
-1.2 - Unreleased
-----------------
+1.2 - Feb 8, 2010
+-----------------
 
 * Fixed error when Sun & Rain theme is installed but turned off in portal_skins [koval] - Dec 9, 2009
 * Improved print styles [serg] - Dec 10, 2009
