Prepare to release: up version to 1.1.1, update HISTORY.txt

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.1.1 - May 18, 2010
+--------------------
+
+* Fixed MANIFEST.in
+  [mylan]
+
 1.1 - Nov 6, 2009
 -----------------
 
