theme doc files updated

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,14 @@
 Changelog
 =========
 
+2.0 - Apr 22, 2011
+------------------
+
+* Theme is compatible with Plone 4
+* IE fixes for rounded tab cournes
+* Dependencies for cumulus portlet and Products.Quills disabled
+* LinguaPlone compayibility tested
+
 1.2 - Feb 8, 2010
 -----------------
 
