install file updated

--- a/docs/INSTALL.txt
+++ b/docs/INSTALL.txt
@@ -1,5 +1,5 @@
-SunRain Plone Theme Installation
-================================
+Installation
+============
 
 To install quintagroup.theme.sunrain on Plone 4 - in the buildout.cfg file of your instance:
 
