--- a/docs/INSTALL.txt
+++ b/docs/INSTALL.txt
@@ -21,3 +21,37 @@ To install diazo sunrain theme on Plone 4 - in the buildout.cfg file of your ins
 
 Then activate 'Sun and Rain Theme' in Plone (Site Setup -> Add-ons).
 
+
+Installation: development mode
+==============================
+
+If you want to customize SunRain theme please use the following installation instructions: 
+
+* download ``quintagroup.theme.sunrain-version.zip`` archive from http://pypi.python.org/pypi/quintagroup.theme.sunrain
+* extract theme archive to get ``quintagroup.theme.sunrain-version`` folder. Remove version from 
+  folder name to have ``quintagroup.theme.sunrain`` folder
+* put ``quintagroup.theme.sunrain`` folder into ``src`` directory of your buildout
+* in buildout.cfg file of your buildout add ``quintagroup.theme.sunrain`` to the list of eggs you are developing and  to the list of eggs to install::
+
+       [buildout]
+       ...
+       develop = src/quintagroup.theme.sunrain
+       ...
+       eggs =
+           ...
+           quintagroup.theme.sunrain
+   
+* Re-run buildout::
+
+    $ ./bin/buildout
+
+* Start instance in development mode::
+
+    $ ./bin/instance fg
+
+* Install ``Sun and Rain Theme`` in Plone (Site Setup -> Add-ons).
+
+Now you can customize SunRain Theme by modifying ``quintagroup.theme.sunrain`` package in ``src`` directory 
+of your buildout.
+
+
