--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,10 @@
 Changelog
 ---------
 
+6.0.1 - November 02, 2011
+
+* added base tag
+
 6.0 - October 31, 2011
 
 * theme package converted into diazo theme
