--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,9 +1,9 @@
 Changelog
 ---------
 
-6.0.2 - November 22, 2011
+6.0.2 - November 23, 2011
 
-* drop mobile.css
+* mobile.css dropped
 
 6.0.1 - November 02, 2011
 
