--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,9 +1,12 @@
 Changelog
 ---------
+6.0.3 - Deember 12, 2011
 
-6.0.2 - November 23, 2011
+* added new functionality: change backround-image for the header
 
-* mobile.css dropped
+6.0.2 - November 22, 2011
+
+* drop mobile.css
 
 6.0.1 - November 02, 2011
 
