HISTORY updated for 6.0.3 release

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,9 +1,10 @@
 Changelog
 ---------
+
 6.0.3 - Deember 12, 2011
 
-* added new functionality: change backround-image for the header
-* added functionality Products.ContentWellPortlets 4.1.0
+* possibility to change backround image for the header added
+* tested with Products.ContentWellPortlets 4.1.0
 
 6.0.2 - November 22, 2011
 
