--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,11 @@
 Changelog
 ---------
-6.0.4 - Deember 12, 2011
+
+6.0.4 - December 26, 2011
 
 * Fixes style for searchbox
 
-6.0.3 - Deember 12, 2011
+6.0.3 - December 12, 2011
 
 * possibility to change backround image for the header added
 * tested with Products.ContentWellPortlets 4.1.0
