update style to search, changed customization slogan

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,10 @@
 Changelog
 ---------
 
+6.0.5 - December 28, 2011
+
+* changed customization slogan
+
 6.0.4 - December 26, 2011
 
 * Fixes style for searchbox
