--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,31 +1,35 @@
 Changelog
 ---------
+6.0.7 - February 08, 2012
+
+- fixed change slogan [naivok]
+
 6.0.6 - January 12, 2012
 
-- Products.PloneFormGen compatibility added
+- Products.PloneFormGen compatibility added [naivok]
 
 6.0.5 - December 29, 2011
 
-* changed slogan customization
+* changed slogan customization [naivok]
 
 6.0.4 - December 26, 2011
 
-* Fixes style for searchbox
+* Fixes style for searchbox [naivok]
 
 6.0.3 - December 12, 2011
 
-* possibility to change backround image for the header added
-* tested with Products.ContentWellPortlets 4.1.0
+* possibility to change backround image for the header added [naivok]
+* tested with Products.ContentWellPortlets 4.1.0 [naivok]
 
 6.0.2 - November 22, 2011
 
-* drop mobile.css
+* drop mobile.css [naivok]
 
 6.0.1 - November 02, 2011
 
-* added base tag
+* added base tag [naivok]
 
-6.0 - October 31, 2011
+6.0 - October 31, 2011 
 
 * theme package converted into diazo theme
 
