--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,12 @@
 Changelog
 ---------
 
-6.0.10 October 11, 2012
+6.0.10 November 26, 2012
 
 * Fixed style to eventDetails [naivok]
 * Fixed style to history [naivok]
+* Added preview image [naivok]
+* Added ajax_load [naivok]
 
 6.0.9 August 20, 2012
 
