--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,10 @@
 Changelog
 ---------
 
+6.2 March 15, 2013
+
+- Plone 4.3rc1 compatibility added [naivok]
+
 6.1.1 January 09, 2013
 
 - Fixed footer link [naivok]
